Added a favicon and replaced the logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="milligram.min.css">
 		<link rel="stylesheet" href="style.css">
 
-		<link rel="icon" href="https://raw.githubusercontent.com/pyupio/statuspage/master/template/favicon.png">
+		<link rel="icon" href="https://static.tapreason.com/favicon.ico">
 	</head>
 	<body>
 
