--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@
 				<ul class="systems">
 
 					<li>
-						Crawlers <span class="status operational">operational</span>
-					</li>
-
-					<li>
 						Rules API <span class="status operational">operational</span>
 					</li>
 
 					<li>
-						Landing page <span class="status operational">operational</span>
+						Data Collection API <span class="status operational">operational</span>
+					</li>
+					
+					<li>
+						Dashboard <span class="status operational">operational</span>
+					</li>
+					
+					<li>
+						Crawlers <span class="status operational">operational</span>
 					</li>
 
-					<li>
-						Mobile API <span class="status operational">operational</span>
-					</li>
 
 				</ul>
 
